--- a/content/data/config.json
+++ b/content/data/config.json
@@ -16,17 +16,7 @@
             {
                 "type": "Link",
                 "label": "Products",
-                "url": "/products"
-            },
-            {
-                "type": "Link",
-                "label": "Projects",
-                "altText": "",
-                "url": "/Projects",
-                "showIcon": false,
-                "icon": "arrowRight",
-                "iconPosition": "right",
-                "elementId": ""
+                "url": "/projects"
             },
             {
                 "type": "Link",
@@ -53,7 +43,7 @@
             {
                 "type": "Link",
                 "label": "Contact",
-                "url": "mailto:thisismyemail.@myemail.me",
+                "url": "mailto:aibd@kaoni.com",
                 "altText": ""
             },
             {
@@ -79,7 +69,7 @@
             "address": "[서울사무소] 서울 서초구 서초동 1557-18, 3층 가온아이",
             "addressAltText": "My address"
         },
-        "copyrightText": "Powered by [Netlify](https://www.netlify.com/)",
+        "copyrightText": "",
         "styles": {
             "self": {
                 "width": "narrow",
