--- a/content/data/config.json
+++ b/content/data/config.json
@@ -20,7 +20,7 @@
             },
             {
                 "type": "Link",
-                "label": "Projects",
+                "label": "Products",
                 "url": "/projects"
             },
             {
